; ModuleID = '/home/carl/AnghaBench/openssl/crypto/bio/extr_bss_dgram.c_BIO_dgram_should_retry.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/bio/extr_bss_dgram.c_BIO_dgram_should_retry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @BIO_dgram_should_retry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @BIO_dgram_should_retry(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = icmp eq i32 %5, 0
  br i1 %6, label %10, label %7

7:                                                ; preds = %1
  %8 = load i32, i32* %3, align 4
  %9 = icmp eq i32 %8, -1
  br i1 %9, label %10, label %14

10:                                               ; preds = %7, %1
  %11 = call i32 (...) @get_last_socket_error()
  store i32 %11, i32* %4, align 4
  %12 = load i32, i32* %4, align 4
  %13 = call i32 @BIO_dgram_non_fatal_error(i32 %12)
  store i32 %13, i32* %2, align 4
  br label %15

14:                                               ; preds = %7
  store i32 0, i32* %2, align 4
  br label %15

15:                                               ; preds = %14, %10
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}

declare dso_local i32 @get_last_socket_error(...) #1

declare dso_local i32 @BIO_dgram_non_fatal_error(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
